chore : docker 수정 - gradle build --no-daemon did not complete successfully

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,7 +16,7 @@ COPY .env .
 COPY src src
 
 # 애플리케이션 빌드
-RUN gradle build --no-daemon
+RUN gradle build -x test --no-daemon
 
 # 두 번째 스테이지: 실행 스테이지
 FROM container-registry.oracle.com/graalvm/jdk:21
